<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".feature.addcar.presentation.AddCarFragment">

    <TextView
        android:id="@+id/tv_add_car"
        style="@style/Text.Size32.JuraSemiBold"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/x1"
        android:layout_marginTop="@dimen/x1"
        android:text="@string/adding_new_car"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_add_media"
        style="@style/Text.Size16.Secondary.JuraSemiBold.AddingPhoto"
        android:layout_width="wrap_content"
        android:layout_marginTop="@dimen/x1"
        android:layout_marginStart="@dimen/x1"
        android:layout_height="wrap_content"
        android:text="@string/adding_photo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_add_car" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_brand"
        style="@style/TextInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/x1"
        android:layout_marginTop="@dimen/x1"
        app:layout_constraintTop_toBottomOf="@id/tv_add_media">

        <com.google.android.material.textfield.TextInputEditText
            style="@style/TextInputEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/brand" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_model"
        style="@style/TextInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/x1"
        android:layout_marginTop="@dimen/x1"
        app:layout_constraintTop_toBottomOf="@id/til_brand">

        <com.google.android.material.textfield.TextInputEditText
            style="@style/TextInputEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/model" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_year"
        style="@style/TextInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/x1"
        android:layout_marginTop="@dimen/x1"
        app:layout_constraintTop_toBottomOf="@id/til_model">

        <com.google.android.material.textfield.TextInputEditText
            style="@style/TextInputEditText.OnlyNumbers"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/year" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_gearbox"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/x1"
        android:layout_marginTop="8dp"
        android:textColorHint="?attr/colorHintText"
        app:layout_constraintTop_toBottomOf="@id/til_year">

        <AutoCompleteTextView
            style="@style/TextInputEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/gearbox"
            android:inputType="none" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_capacity"
        style="@style/TextInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/x1"
        android:layout_marginTop="@dimen/x1"
        app:layout_constraintTop_toBottomOf="@id/til_gearbox">

        <com.google.android.material.textfield.TextInputEditText
            style="@style/TextInputEditText.OnlyNumbers"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/capacity" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_color"
        style="@style/TextInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/x1"
        android:layout_marginTop="@dimen/x1"
        app:layout_constraintTop_toBottomOf="@id/til_capacity">

        <com.google.android.material.textfield.TextInputEditText
            style="@style/TextInputEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/color" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_price"
        style="@style/TextInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/x1"
        android:layout_marginTop="@dimen/x1"
        app:layout_constraintTop_toBottomOf="@id/til_color">

        <com.google.android.material.textfield.TextInputEditText
            style="@style/TextInputEditText.OnlyNumbers"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/price" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_add"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/x1"
        android:layout_marginTop="@dimen/x5"
        android:text="@string/add"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/til_price" />
</androidx.constraintlayout.widget.ConstraintLayout>