<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".feature.authorization.presentation.AuthorizationFragment">

    <TextView
        android:id="@+id/tv_authorization"
        style="@style/Text.Size32.JuraSemiBold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/x1"
        android:layout_marginTop="@dimen/x1"
        android:text="@string/authorization"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_login"
        style="@style/TextInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/x1"
        android:layout_marginTop="@dimen/x1"
        app:layout_constraintBottom_toTopOf="@id/til_password"
        app:layout_constraintTop_toBottomOf="@id/tv_authorization"
        app:layout_constraintVertical_chainStyle="packed">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/login" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_password"
        style="@style/TextInputLayout.Password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/x1"
        android:layout_marginTop="@dimen/x1"
        app:layout_constraintBottom_toTopOf="@id/btn_login"
        app:layout_constraintTop_toBottomOf="@id/til_login">

        <com.google.android.material.textfield.TextInputEditText
            style="@style/PasswordTextInputEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/x1"
        android:layout_marginTop="@dimen/x5"
        android:text="@string/account_login"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/til_password" />
</androidx.constraintlayout.widget.ConstraintLayout>